Cambio anuncio feriado

--- a/clase6.html
+++ b/clase6.html
@@ -44,7 +44,7 @@
 
     <!-- EDITABLE: aviso -->
     <section class="banner" aria-live="polite">
-      <strong id="aviso">Sin avisos por ahora.</strong>
+      <strong id="aviso">Feriado</strong>
       <div style="font-size:14px;color:var(--muted)">Use este espacio para informar feriados o interrupciones temporales del servicio.</div>
     </section>
 
